# K-Eye-Q_1.4

KEyeQ_14/app/: CMakeLists.txt  build.gradle  lint-report.html
KEyeQ_14/app/src/androidTest/java/com/uxfac/k_eye_q_14/: ExampleInstrumentedTest.java
KEyeQ_14/app/src/main/: AndroidManifest.xml
KEyeQ_14/app/src/main/cpp/: ezusb-lib.cpp  ezusb-lib.h  fxload-lib.cpp  fxload-lib.h  native-lib.cpp
KEyeQ_14/app/src/main/cpp/usb/: libusb.h  libusbi.h
KEyeQ_14/app/src/main/cpp/usb/os/: linux_usbfs.h
KEyeQ_14/app/src/main/java/com/uxfac/k_eye_q_14/: DeviceNetwork.java  InitDataActivity.java  MainActivity.java  Person.java  Unit.java  ezusb.java  usbReceiver.java
KEyeQ_14/app/src/main/res/layout/: activity_init_data.xml  activity_main.xml
KEyeQ_14/app/src/main/res/values/: strings.xml
KEyeQ_14/app/src/main/res/xml/: device_filter.xml
KEyeQ_14/app/src/test/java/com/uxfac/k_eye_q_14/: ExampleUnitTest.java
KEyeQ_14/gradle/wrapper/: gradle-wrapper.properties
